<resources>

    <!-- MainActivity -->
    <string name="app_name">DevSupport</string>
    <string name="title_activity_main">Choose menu</string>

    <!-- test list -->
    <string name="apps_install">Application/Install from Google Play(need Google account)</string>
    <string name="wifi_onofflooptest">Wi-Fi/ON OFF loop test</string>
    <string name="bluetooth_onofflooptest">Bluetooth/ON OFF loop test</string>
    <string name="gps_onofflooptest">GPS/ON OFF loop test (*Need platform signature)</string>
    <string name="template_helloworld">Template/Hello world</string>

    <!-- Utility -->
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="confirm_finish">Are you sure you want to finish this test?</string>

    <!-- ============================================================================ -->
    <!-- AppInstallFromGooglePlay.java -->
    <!-- nothing -->

    <!-- WifiOnOffTest.java -->
    <!-- use from layout xml -->
    <string name="wifi_button_description">Toggle Wi-Fi</string>
    <string name="wifi_loop_description">Wi-Fi ON/OFF loop settings</string>
    <string name="wifi_wait_enabled">Waiting for Wi-Fi to be enabled (ms)</string>
    <string name="wifi_wait_disabled">Waiting for Wi-Fi to be disabled (ms)</string>
    <string name="wifi_on_count_label">Wi-Fi on count</string>
    <string name="wifi_off_count_label">Wi-Fi off count</string>
    <string name="wifi_on_fail_count_label">Wi-Fi on FAIL count</string>
    <string name="wifi_off_fail_count_label">Wi-Fi off FAIL count</string>
    <!-- use from java source -->
    <string name="wifi_on">Wifi ON</string>
    <string name="wifi_off">Wifi OFF</string>
    <string name="wifi_enabling_error">Could not enable Wi-Fi &#8230;</string>
    <string name="wifi_disabling_error">Could not disable Wi-Fi &#8230;</string>

    <!-- BluetoothOnOffTest.java -->
    <!-- use from layout xml -->
    <string name="bt_button_description">Toggle bluetooth</string>
    <string name="bt_loop_description">Bluetooth ON/OFF loop settings</string>
    <string name="bt_wait_enabled">Waiting for bluetooth to be enabled (ms)</string>
    <string name="bt_wait_disabled">Waiting for bluetooth to be disabled (ms)</string>
    <string name="bt_on_count_label">Bluetooth on count</string>
    <string name="bt_off_count_label">Bluetooth off count</string>
    <string name="bt_on_fail_count_label">Bluetooth on FAIL count</string>
    <string name="bt_off_fail_count_label">Bluetooth off FAIL count</string>
    <!-- use from java source -->
    <string name="bt_on">BT ON</string>
    <string name="bt_off">BT OFF</string>
    <string name="bt_enabling_error">Could not enable Bluetooth &#8230;</string>
    <string name="bt_disabling_error">Could not disable Bluetooth &#8230;</string>

    <!-- GpsOnOffTest.java -->
    <!-- use from layout xml -->
    <string name="gps_button_description">Toggle GPS</string>
    <string name="gps_loop_description">GPS ON/OFF loop settings</string>
    <string name="gps_wait_enabled">Waiting for GPS to be enabled (ms)</string>
    <string name="gps_wait_disabled">Waiting for GPS to be disabled (ms)</string>
    <string name="gps_on_count_label">GPS on count</string>
    <string name="gps_off_count_label">GPS off count</string>
    <string name="gps_on_fail_count_label">GPS on FAIL count</string>
    <string name="gps_off_fail_count_label">GPS off FAIL count</string>
    <!-- use from java source -->
    <string name="gps_on">GPS ON</string>
    <string name="gps_off">GPS OFF</string>
    <string name="gps_enabling_error">Could not enable GPS &#8230;</string>
    <string name="gps_disabling_error">Could not disable GPS &#8230;</string>

    <!-- For template activity -->
    <string name="hello">Hello world!</string>

</resources>