<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:text="@string/bt_button_description"
        style="@style/TextLabelLayout"/>
	<Button
	    android:id="@+id/bt_button"
	    style="@style/ButtonLayout"/>

	<View style="@style/View_DeviderLineHorizontal" />

	<TextView
	    android:text="@string/bt_loop_description"
	    style="@style/TextLabelLayout" />
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView
	        android:text="@string/bt_wait_enabled"
	        style="@style/TextDescriptionLayout" />
	    <EditText
	        android:id="@+id/bt_edittext_wait_enabled"
	        style="@style/EditText_NumberSigned" />
	</LinearLayout>
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView
	        android:text="@string/bt_wait_disabled"
	        style="@style/TextDescriptionLayout" />
	    <EditText
	        android:id="@+id/bt_edittext_wait_disabled"
	        style="@style/EditText_NumberSigned" />
	</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_button_running_start"
            android:layout_weight="1"
            android:text="@string/start"
            style="@style/ButtonLayout" />
        <Button
            android:id="@+id/bt_button_running_stop"
            android:layout_weight="1"
            android:text="@string/stop"
            style="@style/ButtonLayout" />
	</LinearLayout>
	
    <View style="@style/View_DeviderLineHorizontal" />

    <include layout="@layout/bluetooth_onoff_status" />

</LinearLayout>
